# finance

./: .gitignore  README.md  pyproject.toml  项目计划书.md
data/seed/: README.md  assets.json  events.json  materials.json  prices.csv  solana_research.json
docs/: 数据字典.md  模块设计.md
output/reports/: first_version_report.md  solana_v0.2.0_report.md
src/finance_history/: __init__.py  cli.py
src/finance_history/domain/: __init__.py  models.py  solana.py
src/finance_history/infrastructure/: __init__.py  paths.py  repository.py  solana_market.py  solana_research.py
src/finance_history/services/: __init__.py  report.py  solana_analysis.py  solana_report.py  timeline.py  trend_analysis.py
tests/: test_report.py  test_repository.py  test_solana_analysis.py  test_timeline.py  test_trend_analysis.py
