[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-history-lab"
version = "0.1.0"
description = "A modular research toolkit for finance history, monetary materials, price moves, and event-driven explanations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "wul012" }
]
dependencies = []

[project.scripts]
finance-history = "finance_history.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

